--- a/Medicos/Medicos/Views/MainMenuPage.xaml
+++ b/Medicos/Medicos/Views/MainMenuPage.xaml
@@ -7,22 +7,32 @@
     <ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand" StyleClass="MainSL" BindingContext="{Binding MainMenu}">
             <Label FontAttributes="Bold" FontSize="Large" HorizontalOptions="Center" Text="Caminando Juntos"></Label>
-            <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+            <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="0,20">
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ReportarPacienteCommand}"/>
                 </StackLayout.GestureRecognizers>
+                <Image Source="add_user.png" WidthRequest="24"></Image>
                 <Label Text="Reportar Paciente"></Label>
                 <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
             </StackLayout>
-            <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+            <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="0,20">
+                <StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding VerPacienteCommand}"/>
+                </StackLayout.GestureRecognizers>
+                <Image Source="ver_info_paciente.png" WidthRequest="24"></Image>
                 <Label Text="Ver Información Paciente"></Label>
                 <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
             </StackLayout>
-            <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+            <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="0,20">
+                <StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding BeneficiosCommand}"/>
+                </StackLayout.GestureRecognizers>
+                <Image Source="gift.png" WidthRequest="24"></Image>
                 <Label Text="Beneficios y Encuesta del Prog"></Label>
                 <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
             </StackLayout>
-            <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+            <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="0,20">
+                <Image Source="sign_out_option.png" WidthRequest="24"></Image>
                 <Label Text="Cerrar Sesión"></Label>
                 <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
             </StackLayout>
